--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "build:css": "tailwindcss -i ./src/input.css -o ./public/styles.css --watch",
+    "build:css:prod": "tailwindcss -i ./src/input.css -o ./public/styles.css --minify"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "node-fetch": "^3.3.2"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.0"
   }
 }
